udpate alacritty configs

--- a/home/private_dot_config/alacritty/alacritty.yml
+++ b/home/private_dot_config/alacritty/alacritty.yml
@@ -10,18 +10,19 @@
 # to the user's home directory starting with `~/`.
 import:
   - C:\Users\daylin\AppData\Roaming\alacritty\dracula-pro.yml
+  - ~/.config/alacritty/dracula-pro.yml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-#env:
+env:
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-  #TERM: alacritty
+  TERM: xterm-256color
 
 window:
   # Window dimensions (changes require restart)
@@ -47,7 +48,7 @@ window:
   # by DPI and the specified value is always added at both opposing sides.
   padding:
     x: 10
-    y: 20
+    y: 5
 
   # Spread additional padding evenly around the terminal content.
   dynamic_padding: true
@@ -111,7 +112,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: "MonoLisa NF"
+    family: "MonoLisa Nerd Font"
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -122,7 +123,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "MonoLisa NF"
+    #family: "MonoLisa Nerd Font"
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -134,7 +135,7 @@ font:
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
     # family: "DejaVuSansMono NF"
-    family: "MonoLisa NF"
+    # family: "MonoLisa NF"
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -145,13 +146,13 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "MonoLisa NF"
+    # family: "MonoLisa NF"
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
 
   # Point size
-  size: 10
+  size: 8
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
