adjust tmux coloring for alacritty theme

--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -18,4 +18,5 @@ unbind '"'
 unbind %
 
 # Set default term to xterm
-set -g default-terminal xterm-256color
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
