--- a/home/private_dot_config/alacritty/alacritty.yml
+++ b/home/private_dot_config/alacritty/alacritty.yml
@@ -41,7 +41,7 @@ window:
   #position:
   #  x: 0
   #  y: 0
-
+  opacity: .80
   # Window padding (changes require restart)
   #
   # Blank space added around the window in pixels. This padding is scaled
@@ -369,16 +369,16 @@ font:
   # When set to `true`, selected text will be copied to the primary clipboard.
   #save_to_clipboard: false
 
-#cursor:
+cursor:
   # Cursor style
-  #style:
+  style:
     # Cursor shape
     #
     # Values for `shape`:
     #   - ▇ Block
     #   - _ Underline
     #   - | Beam
-    #shape: Block
+    shape: Underline
 
     # Cursor blinking state
     #
@@ -387,7 +387,7 @@ font:
     #   - Off: Disable blinking by default
     #   - On: Enable blinking by default
     #   - Always: Force the cursor to always blink
-    #blinking: Off
+    blinking: on
 
   # Vi mode cursor style
   #
