replace enhancd with zoxide

--- a/home/private_dot_config/sheldon/plugins.toml
+++ b/home/private_dot_config/sheldon/plugins.toml
@@ -29,14 +29,14 @@ use = ['{completion,clipboard}.zsh']
 [plugins.base16]
 github = "chriskempson/base16-shell"
 
-[plugins.enhancd]
-github = "b4b4r07/enhancd"
+# [plugins.enhancd]
+# github = "b4b4r07/enhancd"
 
 [plugins.zsh-defer]
 github = "romkatv/zsh-defer"
 
 [plugins.zcolors]
-github ="marlonrichert/zcolors"
+github = "marlonrichert/zcolors"
 
 [plugins.zsh-syntax-highlighting]
 github = "zsh-users/zsh-syntax-highlighting"
