update lock script and zellij theme

--- a/home/private_dot_config/zellij/config.yaml
+++ b/home/private_dot_config/zellij/config.yaml
@@ -447,24 +447,22 @@ keybinds:
 pane_frames: false
 
 # Choose the theme that is specified in the themes section.
-# Default: default
+# # Default: default
 theme: dracula
 themes:
   dracula:
-    fg: [248,248,242]
-    bg: [128,255,234]
-    black: [0,0,0]
-    red: [255,149,128]
-    green: [138,255,128]
-    yellow: [255,255,128]
-    blue: [128,255,128]
-    magenta: [255,128,191]
-    cyan: [128,255,234]
-    white: [248,248,242]
-    orange: [255,202,128]
-      #gray: [65,77,88]
-    gray: [121,112,169]
-
+    fg: [248, 248, 242]
+    bg: [40, 42, 54]
+    black: [0, 0, 0]
+    gray: [68, 71, 90]
+    red: [255, 85, 85]
+    green: [80, 250, 123]
+    yellow: [241, 250, 140]
+    blue: [98, 114, 164]
+    magenta: [255, 121, 198]
+    cyan: [139, 233, 253]
+    white: [255, 255, 255]
+    orange: [255, 184, 108]
 
 # Choose the mode that zellij uses when starting up.
 # Default: normal
