--- a/home/private_dot_config/starship/config.toml
+++ b/home/private_dot_config/starship/config.toml
@@ -2,7 +2,7 @@
 format = "[$user]($style) on "
 
 [character]
-success_symbol = "[❯](bold #8AFF80)[❯](bold #80FFEA)[❯](bold #FF80BF)"
+success_symbol = "[❯](bold green)[❯](bold yellow)[❯](bold cyan)"
 error_symbol = "[✗](bold red) "
 
 [gcloud]
