--- a/home/private_dot_config/git/config
+++ b/home/private_dot_config/git/config
@@ -15,3 +15,8 @@
 	autosetuprebase = always
 [alias]
 	adog = log --all --decorate --oneline --graph
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
