--- a/home/private_dot_config/leftwm/config.toml
+++ b/home/private_dot_config/leftwm/config.toml
@@ -2,17 +2,19 @@ modkey = "Mod4"
 mousekey = "Mod4"
 workspaces = []
 tags = ["1", "2", "3", "4", "5", "6", "7", "8"]
-# tags = ["", "", "", "", "", ""]
 layouts = ["MainAndVertStack", "Monocle", "EvenVertical", "CenterMainBalanced"]
 layout_mode = "Workspace"
 disable_current_tag_swap = false
 focus_behaviour = "Sloppy"
 focus_new_windows = true
 
+
 #####################################
 # Program Specific Settings
 #####################################
-## Rofi
+# ------
+# Rofi
+# ------
 [[keybind]]
 command = "Execute"
 value = "~/.config/leftwm/themes/current/rofi/bin/launcher.sh"
@@ -33,15 +35,10 @@ key = "k"
 
 [[keybind]]
 command = "Execute"
-value = "~/.config/leftwm/themes/current/rofi/bin/rofi-screenshot"
-modifier = ["modkey"]
-key = "s"
-
-[[keybind]]
-command = "Execute"
-value = "~/.config/leftwm/themes/current/rofi/bin/rofi-screenshot"
+value = "~/.config/leftwm/themes/current/rofi/bin/bluetooth.sh"
 modifier = ["modkey", "Shift"]
-key = "s"
+key = "b"
+
 
 [[keybind]]
 command = "Execute"
@@ -65,8 +62,13 @@ key = "l"
 command = "Execute"
 value = "flameshot gui"
 modifier = ["modkey"]
-key = "y"
+key = "s"
 
+[[keybind]]
+command = "Execute"
+value = "flameshot screen -n 0"
+modifier = ["modkey", "Shift"]
+key = "s"
 
 [[scratchpad]]
 name = "Alacritty"  # This is the name which is referenced when calling (case-sensitive)
