--- a/home/private_dot_config/starship/config.toml
+++ b/home/private_dot_config/starship/config.toml
@@ -2,23 +2,83 @@
 format = "[$user]($style) on "
 
 [character]
-success_symbol = "[❯](bold green)[❯](bold yellow)[❯](bold cyan)"
+# success_symbol = "[❯](bold green)[❯](bold yellow)[❯](bold cyan)"
+success_symbol = "[⁘](bold green)[⁘](bold yellow)[⁘](bold cyan)"
 error_symbol = "[✗](bold red) "
-
+# ⁘
 [gcloud]
-disabled = true
-
-[python]
 disabled = true
 
 [rlang]
 disabled = true
 
-[nodejs]
-disabled = true
+# nerd font symbols
+
+[aws]
+symbol = "  "
+
+[buf]
+symbol = " "
+
+[c]
+symbol = " "
+
+[conda]
+symbol = " "
+
+[dart]
+symbol = " "
+
+[directory]
+read_only = " "
+
+[docker_context]
+symbol = " "
+
+[elixir]
+symbol = " "
+
+[elm]
+symbol = " "
+
+[git_branch]
+symbol = " "
 
 [golang]
-disabled = true
+symbol = " "
+
+[haskell]
+symbol = " "
+
+[hg_branch]
+symbol = " "
+
+[java]
+symbol = " "
+
+[julia]
+symbol = " "
+
+[memory_usage]
+symbol = " "
+
+[nim]
+symbol = " "
+
+[nix_shell]
+symbol = " "
+
+[nodejs]
+symbol = " "
 
 [package]
-disabled = true
+symbol = " "
+
+[python]
+symbol = " "
+
+[spack]
+symbol = "🅢 "
+
+[rust]
+symbol = " "
