--- a/home/private_dot_config/leftwm/config.toml
+++ b/home/private_dot_config/leftwm/config.toml
@@ -8,6 +8,9 @@ disable_current_tag_swap = false
 focus_behaviour = "Sloppy"
 focus_new_windows = true
 
+window_rules = [
+  {window_class = "wavebox", spawn_on_tag = 8}
+]
 
 #####################################
 # Program Specific Settings
@@ -75,10 +78,10 @@ name = "Alacritty"  # This is the name which is referenced when calling (case-se
 value = "alacritty" # The command to load the application if it isn't started
 # x, y, width, height are in pixels when an integer is inputted or a percentage when a float is inputted.
 # These values are relative to the size of the workspace, and will be restricted depending on the workspace size.
-x = 0.25
-y = 0.25
-height = 0.5
-width = 0.5
+x = 0.1
+y = 0.1
+height = 0.8
+width = 0.8
 
 [[keybind]]
 command = "ToggleScratchPad"
