--- a/home/private_dot_config/lsd/config.yaml
+++ b/home/private_dot_config/lsd/config.yaml
@@ -79,7 +79,7 @@ recursion:
   enabled: false
   # How deep the recursion should go. This has to be a positive integer. Leave
   # it unspecified for (virtually) infinite.
-  depth: 2
+  # depth: 2
 
 # == Size ==
 # Specifies the format of the size column.
