--- a/home/private_dot_config/git/config
+++ b/home/private_dot_config/git/config
@@ -30,6 +30,7 @@
   # list aliases
   la = "!git config -l | grep alias | cut -c 7-"
 	test = !git add -A && git commit -m \"$(date)\"
+	root = rev-parse --show-toplevel
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
