add delta to lazygit

--- a/home/private_dot_config/lazygit/config.yml
+++ b/home/private_dot_config/lazygit/config.yml
@@ -7,3 +7,6 @@ gui:
   showFileTree: true
 git:
   branchLogCmd: 'git log --graph --all --color=always --decorate --date=relative --oneline'
+  paging:
+    colorArg: always
+    pager: delta --dark --paging=never --theme catppuccin
