--- a/home/private_dot_config/git/config
+++ b/home/private_dot_config/git/config
@@ -14,26 +14,29 @@
 [branch]
 	autosetuprebase = always
 [alias]
+	root = rev-parse --show-toplevel
 	adog = log --all --decorate --oneline --graph
 	gl = config --global -l
 	last = log -1 HEAD --stat
 	ll = log --oneline
 	st = status -sb
-
   s = status -s
   co = checkout
   cob = checkout -b
-
 	cmt = !git commit -m \"time: $(date +\"%Y.%m.%d %H:%M:%S\")\"
 	save = !git add -A && git commit -m \"time: $(date +\"%Y.%m.%d %H:%M:%S\")\"
-
   # list aliases
   la = "!git config -l | grep alias | cut -c 7-"
-	root = rev-parse --show-toplevel
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
 [help]
-	autocorrect = 20
+  autocorrect = 20
+
+[delta]
+  line-numbers = true
+  zero-style = dim syntax
+  diff-so-fancy = true
+  theme = catppuccin
