testing other delta configs

--- a/home/private_dot_config/git/config
+++ b/home/private_dot_config/git/config
@@ -37,6 +37,5 @@
 
 [delta]
   line-numbers = true
-  zero-style = dim syntax
-  diff-so-fancy = true
   theme = catppuccin
+  hunk-header-decoration-style = none
