update sheldon syntax

--- a/home/private_dot_config/sheldon/plugins.toml
+++ b/home/private_dot_config/sheldon/plugins.toml
@@ -47,4 +47,4 @@ github = "Aloxaf/fzf-tab"
 apply = ["defer"]
 
 [templates]
-defer = { value = 'zsh-defer source "{{ file }}"', each = true }
+defer = "{% for file in files %}zsh-defer source \"{{ file }}\"\n{% endfor %}"
